@@ -1,1 +1,1 @@
-W: fields-bugs-field-does-not-refer-to-debian-infrastructure: bugs-field-does-not-refer-to-debian-infrastructure line 11
+W: fields-bugs-field-does-not-refer-to-debian-infrastructure: bugs-field-does-not-refer-to-debian-infrastructure https://upstream.org/ (line 11)
