@@ -15,6 +15,8 @@ lintian (2.5.68) UNRELEASED; urgency=medium
     + [CL] Emit pedantic warnings for packages that refer to a non-Git
       version control systems hosted in the Debian infrastructure for the
       upcoming salsa.debian.org migration.  (Closes: #885974)
+    + [CL] Include the offending "Bugs" field value in the output of the
+      bugs-field-does-not-refer-to-debian-infrastructure tag.
   * checks/huge-usr-share.pm:
     + [CL] Bump arch-dep-package-has-big-usr-share thresholds; they were
       last set in 2004.  (Closes: #648755)
